--- a/netflix-clone/src/Components/Footer/footer.css
+++ b/netflix-clone/src/Components/Footer/footer.css
@@ -3,7 +3,7 @@
 	color: grey;
     display: flex;
     justify-content: center;
-    margin-top: 70px;
+    /* margin-top: 70px; */
 }
 .footer_inner_container{
     width: 60%;
