--- a/netflix-clone/src/index.css
+++ b/netflix-clone/src/index.css
@@ -1,3 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Lexend:wght@400;500;600;700;800;900&display=swap');
+
+:root {
+  --font-base: 'Lexend', sans-serif;
+  --font-second-base: 'Lexend', sans-serif;
+  --bg-color: #111111;
+  --primary-color: #ffffff;
+  --secondary-color: #e50914;
+}
 *{
   margin: 0;
   padding: 0;
@@ -5,4 +15,5 @@
 }
 body{
   background-color: #111;
+
 }
