--- a/netflix-clone/src/Components/Footer/footer.css
+++ b/netflix-clone/src/Components/Footer/footer.css
@@ -46,7 +46,7 @@
     margin-bottom:10px;
 }
 @media (max-width: 768px) {
-  .footer_inner_container {
+  .footer_inner_container  {
     display: block;
     width: 100%; /* Full width for mobile */
     padding: 0 10px; /* Add padding to the sides */
@@ -59,7 +59,7 @@
   }
 
   .footer_data ul {
-    flex-direction: row; /* Show links in a row on mobile */
+    flex-direction: column !important; /* Show links in a row on mobile */
     justify-content: space-around;
     height: auto;
   }
